--- a/src/client/js/otp/locale/de.json
+++ b/src/client/js/otp/locale/de.json
@@ -17,11 +17,11 @@
     "Zoom Out": "herauszoomen",
     "Minimize all": "Alle Dialoge minimieren",
     "Unminimize all": "Dialoge wiederanzeigen",
-    "Stop Viewer": "",
-    "Plan Trip": "",
-    "From Stop": "",
-    "To Stop": "",
-    "Routes Serving Stop": "",
+    "Stop Viewer": "schließe",
+    "Plan Trip": "Plane Route",
+    "From Stop": "von Haltestelle",
+    "To Stop": "zu Haltestelle",
+    "Routes Serving Stop": "Routen hierher",
     "Legend : travel time in minutes": "Legende: Reisezeit in Minuten",
     "Analyst": "Analyse",
     "Refresh": "Aktualisieren",
@@ -43,8 +43,8 @@
     "Recommended Drop Off:": "",
     "Multimodal Trip Planner": "Multimodaler Routenplaner",
     "Itineraries": "Routenvorschläge",
-    "%d Itinerary Returned": "",
-    "%d Itinerary Returned_plural": "",
+    "%d Itinerary Returned": "Route gefunden",
+    "%d Itinerary Returned_plural": "Routen gefunden",
     "Link to search": "Link für diese Suche erstellen",
     "First": "Erster",
     "Previous": "Vorheriger",
@@ -58,7 +58,7 @@
     "on time": "pünktlich",
     "Total walk distance for this trip exceeds specified maximum": "",
     "End": "Ankunft",
-    "Trip Summary": "",
+    "Trip Summary": "Zusammenfassung",
     "Travel": "Reise",
     "Time": "Dauer",
     "Total Walk": "",
@@ -67,9 +67,9 @@
     "Transfers": "Umsteigepunkt",
     "Fare": "Tarif",
     "Valid": "Gültig bis",
-    "Link to Itinerary": "",
+    "Link to Itinerary": "Verlinkung",
     "Print": "drucken",
-    "Your Trip": "",
+    "Your Trip": "Deine Route",
     "Email": "",
     "every %d min": "",
     "every %d min_plural": "",
