--- a/src/client/js/otp/locale/de.json
+++ b/src/client/js/otp/locale/de.json
@@ -61,9 +61,9 @@
     "Trip Summary": "Zusammenfassung",
     "Travel": "Reise",
     "Time": "Dauer",
-    "Total Walk": "",
+    "Total Walk": "Gesamtgehzeit",
     "Total Bike": "",
-    "Total drive": "",
+    "Total drive": "Gesamtfahrzeit",
     "Transfers": "Umsteigepunkt",
     "Fare": "Tarif",
     "Valid": "Gültig bis",
@@ -73,8 +73,8 @@
     "Email": "",
     "every %d min": "",
     "every %d min_plural": "",
-    "<b>Board</b> at ": "",
-    "Stop": "",
+    "<b>Board</b> at ": "<b>Aufsteigen</b> bei ",
+    "Stop": "Haltestelle",
     "Time in transit": "",
     "Trip Viewer": "",
     "late as": "",
@@ -83,7 +83,7 @@
     "at": "um",
     "%(currency)s %(price)s": "",
     "Start: %(location)s at %(time_date)s": "",
-    "Board": "",
+    "Board": "Aufsteigen",
     "(%(agency_id)s Stop ID #%(stop_id)s),": "",
     "End: %(location)s at %(time_date)s": "",
     "(%(agencyId)s Stop ID #%(id)s),": "",
@@ -141,7 +141,7 @@
     "Subway": "U-Bahn",
     "Train": "Bahn",
     "Ferry": "Fähre",
-    "Light Rail": "",
+    "Light Rail": "Umlaufbahn",
     "Cable Car": "Standseilbahn",
     "Funicular": "Seilbahn",
     "Aerial Tram": "",
