--- a/src/client/js/otp/locale/de.json
+++ b/src/client/js/otp/locale/de.json
@@ -66,6 +66,7 @@
     "Total drive": "Gesamtfahrzeit",
     "Transfers": "Umsteigepunkt",
     "Fare": "Tarif",
+    "Current Position": "Aktuelle Position",
     "Valid": "Gültig bis",
     "Link to Itinerary": "Verlinkung",
     "Print": "drucken",
