--- a/src/client/js/otp/locale/it.json
+++ b/src/client/js/otp/locale/it.json
@@ -48,6 +48,7 @@
     "Link to search": "Link a questa ricerca",
     "First": "Primo",
     "Previous": "Precedente",
+    "Current Position": "Posizione attuale",
     "Next": "Successivo",
     "Last": "Ultimo",
     "CONTINUES AS": "Rimani a bordo",
