--- a/src/client/js/otp/locale/de.json
+++ b/src/client/js/otp/locale/de.json
@@ -107,8 +107,8 @@
     "The values of triangleSafetyFactor, triangleSlopeFactor, and triangleTimeFactor must sum to 1": "",
     "If triangleSafetyFactor, triangleSlopeFactor, and triangleTimeFactor are provided, OptimizeType must be TRIANGLE": "",
     "If OptimizeType is TRIANGLE, triangleSafetyFactor, triangleSlopeFactor, and triangleTimeFactor must be set": "",
-    "Set as Start Location": "",
-    "Set as End Location": "",
+    "Set as Start Location": "Route von hier",
+    "Set as End Location": "Route nach hier",
     "Destination": "",
     "Error %(error_id)d": "",
     "No Trip Found": "",
