--- a/src/client/js/otp/locale/it.json
+++ b/src/client/js/otp/locale/it.json
@@ -27,7 +27,7 @@
     "Refresh": "Aggiorna",
     "Set as Analysis Location": "Origine dell'analisi",
     "Bike Share Planner": "Bike Sharing",
-    "Trip Options": "Opzioni di viaggio",
+    "Trip Options": "Opzioni di itinerario",
     "PICK UP BIKE": "Prendi la bici qui",
     "ALTERNATE PICKUP": "Puoi prendere la bici anche qui",
     "DROP OFF BIKE": "Lascia la bici qui",
