--- a/src/client/js/otp/locale/de.json
+++ b/src/client/js/otp/locale/de.json
@@ -220,9 +220,9 @@
     "Plan Your Trip": "Route berechnen",
     " to _direction": "",
     " to _bus_direction": "",
-    "Start_template": "Abfahrt",
-    "Depart_itinerary": "Abfahrt",
-    "depart_itinerary": "Abfahrt",
-    "Start_popup": "Abfahrt",
-    "Depart_tripoptions": "Abfahrt"
+    "Start_template": "Start",
+    "Depart_itinerary": "Start",
+    "depart_itinerary": "Start",
+    "Start_popup": "Start",
+    "Depart_tripoptions": "Start"
 }
