--- a/src/client/js/otp/locale/de.json
+++ b/src/client/js/otp/locale/de.json
@@ -80,7 +80,7 @@
     "Trip Viewer": "",
     "late as": "",
     "Stay on board": "an Bord bleiben",
-    "Alight": "",
+    "Alight": "Aussteigen",
     "at": "um",
     "%(currency)s %(price)s": "",
     "Start: %(location)s at %(time_date)s": "",
