--- a/src/client/js/otp/locale/de.json
+++ b/src/client/js/otp/locale/de.json
@@ -76,8 +76,8 @@
     "every %d min_plural": "",
     "<b>Board</b> at ": "<b>Aufsteigen</b> bei ",
     "Stop": "Haltestelle",
-    "Time in transit": "",
-    "Trip Viewer": "",
+    "Time in transit": "Dauer",
+    "Trip Viewer": "Strecke",
     "late as": "",
     "Stay on board": "an Bord bleiben",
     "Alight": "Aussteigen",
@@ -140,7 +140,7 @@
     "Car": "Auto",
     "Bus": "Bus",
     "Subway": "U-Bahn",
-    "Train": "Bahn",
+    "Train": "Lift",
     "Ferry": "Fähre",
     "Light Rail": "Umlaufbahn",
     "Cable Car": "Standseilbahn",
