--- a/src/client/js/otp/locale/it.json
+++ b/src/client/js/otp/locale/it.json
@@ -1,7 +1,7 @@
 {
     "Transit": "Mezzi pubblici",
     "Bus Only": "Solo Bus",
-    "Rail Only": "Solo Treno",
+    "Rail Only": "Solo Impianti di risalita",
     "Airplane Only": "",
     "Bicycle Only": "In bici",
     "Bicycle &amp; Transit": "Bici &amp; mezzi pubblici",
